[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Seb/Glitch System/Glitch Area Effect Base.gd" type="Script" id=1]
[ext_resource path="res://Assets/Test Assets/Pills main character.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.5114

[node name="Glitch Base" type="Area2D"]
position = Vector2( 41.4199, 17.0089 )
collision_layer = 2147483652
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.032561, 0.032561 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -19.176
margin_top = -18.2841
margin_right = 1180.82
margin_bottom = 1181.72
rect_scale = Vector2( 0.03, 0.03 )
rect_pivot_offset = Vector2( 1, 0 )
action_mode = 0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -4.83765
margin_top = -7.33419
margin_right = 35.1624
margin_bottom = 32.6658
text = "5"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="OnRunnerEnter"]
[connection signal="body_exited" from="." to="." method="OnRunnerExit"]
[connection signal="pressed" from="TextureButton" to="." method="OnActivateGlitch"]
